Fix site errors
The site was not showing due to errors. This commit addresses those errors.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 
 #root {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 .logo {
@@ -29,12 +31,4 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
